[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymez"
dynamic = ["version"]
description = 'pyMez is an open source package for scientific data handling, analysis and acquisition.'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "sandersa", email = "aric.sanders@nist.gov" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["lxml","pyvisa","numpy","scipy","pandas","sympy","matplotlib","statsmodels","django","networkx","pdfkit","h5py","pywin32","ipywidgets"]

[project.urls]
Documentation = "https://github.com/sandersa/pymez#readme"
Issues = "https://github.com/sandersa/pymez/issues"
Source = "https://github.com/sandersa/pymez"

[tool.hatch.version]
path = "pymez/__init__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:pymez tests}"

[tool.coverage.run]
source_pkgs = ["pymez", "tests"]
branch = true
parallel = true
omit = [
  "pymez/__about__.py",
]

[tool.coverage.paths]
pymez = ["pymez", "*/pymez/pymez"]
tests = ["tests", "*/pymez/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
